[metadata]
name = chaostoolkit-ansible
author = Mickael Roger
author_email = mickael@mickael-roger.com
description = An ansible provider for Chaos toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mickael-Roger/chaostoolkit-ansible
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License
    Operating System :: OS Independent

[aliases]
release = sdist bdist_wheel
test = pytest

[wheel]
universal = 0
